Add a note regarding extra memory needed.